[package]
name = "recursive_aggregation_circuit"
version = "1.0.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
franklin-crypto = {git = "https://github.com/starslabhq/franklin-crypto", branch = "tau", features = ["multicore", "plonk"]}
sha2 = "0.9"
hex = "*"
once_cell = "*"
